# Zelty_api

./: .gitignore  pyproject.toml  schema.drawio  zelty_dishes.ipynb  zelty_options.ipynb  zelty_orders.py
App/: backend.py  front.html  stocks.json
App/static/: app.js
App/templates/: front.html
